--- a/RealConstruction.csproj
+++ b/RealConstruction.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RealConstructionThreading.cs" />
     <Compile Include="Util\SaveAndRestore.cs" />
+    <Compile Include="Util\UIUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon\RealConstruction.png" />
