--- a/RealConstruction.csproj
+++ b/RealConstruction.csproj
@@ -109,15 +109,19 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>rd /q /s "F:\SteamLibrary\steamapps\workshop\content\255710\1614061108"
-mkdir "F:\SteamLibrary\steamapps\workshop\content\255710\1614061108"
-copy "D:\Mod\RealConstruction\bin\Release\RealConstruction.dll"  "F:\SteamLibrary\steamapps\workshop\content\255710\1614061108\RealConstruction.dll"
-mkdir "F:\SteamLibrary\steamapps\workshop\content\255710\1614061108\Locales"
-copy "D:\Mod\RealConstruction\Locales\*.txt" "F:\SteamLibrary\steamapps\workshop\content\255710\1614061108\Locales"
-copy "D:\Mod\RealConstruction\bin\Release\CitiesHarmony.API.dll"  "F:\SteamLibrary\steamapps\workshop\content\255710\1614061108\CitiesHarmony.API.dll"
-mkdir "F:\SteamLibrary\steamapps\workshop\content\255710\1614061108\Icon"
-copy "D:\Mod\RealConstruction\Icon\*.png" "F:\SteamLibrary\steamapps\workshop\content\255710\1614061108\Icon"
-copy "D:\Mod\RealConstruction\PreviewImage.png"  "F:\SteamLibrary\steamapps\workshop\content\255710\1614061108\PreviewImage.png"</PostBuildEvent>
+    <PostBuildEvent>setlocal
+set SRC_PATH=$(ProjectDir)
+set DST_PATH=%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\RealConstruction
+rd /q /s "%25DST_PATH%25"
+mkdir "%25DST_PATH%25"
+copy "$(TargetPath)" "%25DST_PATH%25\RealConstruction.dll"
+mkdir "%25DST_PATH%25\Locales"
+copy "%25SRC_PATH%25\Locales\*.txt" "%25DST_PATH%25\Locales"
+copy "$(TargetDir)CitiesHarmony.API.dll"  "%25DST_PATH%25\CitiesHarmony.API.dll"
+mkdir "%25DST_PATH%25\Icon"
+copy "%25SRC_PATH%25\Icon\*.png" "%25DST_PATH%25\Icon"
+copy "%25SRC_PATH%25\PreviewImage2.png"  "%25DST_PATH%25\PreviewImage.png"
+endlocal</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
