Exclude harmony.dll from copy.

--- a/RealConstruction.csproj
+++ b/RealConstruction.csproj
@@ -117,7 +117,7 @@ mkdir "%25DST_PATH%25"
 copy "$(TargetPath)" "%25DST_PATH%25\RealConstruction.dll"
 mkdir "%25DST_PATH%25\Locales"
 copy "%25SRC_PATH%25\Locales\*.txt" "%25DST_PATH%25\Locales"
-copy "$(TargetDir)CitiesHarmony.API.dll"  "%25DST_PATH%25\CitiesHarmony.API.dll"
+rem copy "$(TargetDir)CitiesHarmony.API.dll"  "%25DST_PATH%25\CitiesHarmony.API.dll"
 mkdir "%25DST_PATH%25\Icon"
 copy "%25SRC_PATH%25\Icon\*.png" "%25DST_PATH%25\Icon"
 copy "%25SRC_PATH%25\PreviewImage2.png"  "%25DST_PATH%25\PreviewImage.png"
