--- a/RealConstruction.csproj
+++ b/RealConstruction.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Patch\DistrictParkGetAcademicYearProgressPatch.cs" />
     <Compile Include="Patch\CarAIPathfindFailurePatch.cs" />
     <Compile Include="Patch\CargoTruckAIArriveAtTargetPatch.cs" />
+    <Compile Include="Patch\MatchOffersPatch.cs" />
     <Compile Include="Patch\PlayerBuildingAICreateBuildingPatch.cs" />
     <Compile Include="Patch\PlayerBuildingAIGetBudgetPatch.cs" />
     <Compile Include="Patch\PlayerBuildingAIGetConstructionTimePatch.cs" />
@@ -99,7 +100,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon\RealConstruction.png" />
+    <Content Include="Locales\de.txt" />
     <Content Include="Locales\en.txt" />
+    <Content Include="Locales\es.txt" />
+    <Content Include="Locales\fr.txt" />
+    <Content Include="Locales\ja.txt" />
+    <Content Include="Locales\ko.txt" />
+    <Content Include="Locales\pl.txt" />
+    <Content Include="Locales\pt.txt" />
+    <Content Include="Locales\ru.txt" />
     <Content Include="Locales\zh-cn.txt" />
     <Content Include="Locales\zh.txt" />
     <Content Include="PreviewImage.png" />
